# sozabot-v11.4

./: LICENSE  README.md  __init__.py  bot.py  pyproject.toml
.github/workflows/: ci.yml
handler/: maimai_handler.py
src/plugins/sozabot_nb_core/: __init__.py  config.py
src/plugins/sozabot_nb_core/api/maimai/: lxns.py
src/plugins/sozabot_nb_core/handler/: maimai_handler.py
tool/: log.py
