[project]
name = "sozabot"
version = "0.1.0"
description = "sozabot"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V12", module_name = "nonebot.adapters.onebot.v12" },
    { name = "Telegram", module_name = "nonebot.adapters.telegram" },
    { name = "QQ", module_name = "nonebot.adapters.qq" },
    {name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11"}
]
plugins = []
plugin_dirs = ["src/plugins"]
builtin_plugins = []
